app/tailwind.css
@import url("https://fonts.cdnfonts.com/css/nats");
@tailwind base;
@tailwind components;
@tailwind utilities;

.nats-font {
  font-family: "NATS", sans-serif;
}
h1 {
  font-weight: 500;
  line-height: 1.3;
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --primaryBG: #0c162acc;
    --secondaryBG: #0c1e3acc;
    --card-foreground: 222.2 84% 4.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;
    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;
    --radius: 0.5rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  }
}

@layer base {
  * {
    border-color: var(--border);
  }
  body {
    color: white;
    background: linear-gradient(120deg, #0b2243, #141131);
    min-height: 100vh;
  }
}

@layer utilities {
  .card-shadow {
    box-shadow: 0px -4px 64px 0px rgba(0, 0, 0, 0.25);
  }
  .gradient-rectangle {
    background: radial-gradient(
        100% 100% at 0% 0%,
        rgba(45, 122, 255, 0.5) 37.5%,
        rgba(58, 126, 240, 0) 100%
      ),
      radial-gradient(
        100% 100% at 100% 0%,
        rgba(143, 28, 229, 0.5) 0%,
        rgba(143, 28, 229, 0) 100%
      ),
      linear-gradient(98deg, #5bc6f3 0%, #450aaf 100%);
    outline: rgba(255, 255, 255, 0.1) 1px solid;
    filter: drop-shadow(0px 0px 64px rgba(52, 119, 242, 0.25));
  }
}

